Atualizacao com a parte Sobre mim

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@ target="_blank">github.com/YamaguchiYuri</a></p>
  </section>
  <footer>
  <p>&copy; 2025 Yuri Yamaguchi. Todos os direitos reservados.</p>
+<section>
+ <h2>Sobre Mim</h2>
+ <p>Sou estudante de desenvolvimento web e este é meu portfólio.</p>
+</section>
  </footer>
 </body>
 </html>
